--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>CityGo: Lightweight Urban Modeling and Rendering with Proxy Buildings and Residual Gaussians</title>
 <!--  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">-->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,28 +52,51 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">CityGo: Lightweight Urban Modeling and Rendering with Proxy Buildings and Residual Gaussians</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
+<!--              <span class="author-block">-->
+<!--                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Weihang Liu</a><sup>*</sup>,</span>-->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Weihang Liu</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
-                  </div>
+                Weihang Liu<sup>1,4,*</sup>,</span>
+              <span class="author-block">
+                Yuhui Zhong<sup>2,*</sup>,</span>
+              <span class="author-block">
+                Yuke Li<sup>1,*</sup>,</span>
+              <span class="author-block">
+                Xi Chen<sup>1</sup>,</span>
+              <span class="author-block">
+                Jiadi Cui<sup>1,5</sup>,</span>
+              <span class="author-block">
+                Honglong Zhang<sup>3</sup>,</span>
+              <span class="author-block">
+                Lan Xu<sup>1</sup>,</span>
+              <span class="author-block">
+                Xin Lou<sup>1,4</sup>,</span>
+              <span class="author-block">
+                Yujiao Shi<sup>1</sup>,</span>
+              <span class="author-block">
+                Jingyi Yu<sup>1</sup>,</span>
+              <span class="author-block">
+                Yingliang Zhang<sup>2</sup>,
+              </span>
+            </div>
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div>
+            <div class="is-size-5 publication-authors">
+              <span class="author-block"><sup>1</sup>ShanghaiTech University,</span>
+              <span class="author-block"><sup>2</sup>DGene,</span>
+              <span class="author-block"><sup>3</sup>Migu Cultural Technology Co.,Ltd,</span>
+              <span class="author-block"><sup>4</sup>GGU Technology Co., Ltd,</span>
+              <span class="author-block"><sup>5</sup>Stereye,
+              </span>
+              <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+            </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://arxiv.org/pdf/2505.21041.pdf" target="https://arxiv.org/pdf/2505.21041"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -83,30 +106,30 @@
                     </span>
 
                     <!-- Supplementary PDF link -->
-                    <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Supplementary</span>
-                    </a>
-                  </span>
+<!--                    <span class="link-block">-->
+<!--                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"-->
+<!--                      class="external-link button is-normal is-rounded is-dark">-->
+<!--                      <span class="icon">-->
+<!--                        <i class="fas fa-file-pdf"></i>-->
+<!--                      </span>-->
+<!--                      <span>Supplementary</span>-->
+<!--                    </a>-->
+<!--                  </span>-->
 
                   <!-- Github link -->
-                  <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code</span>
-                  </a>
-                </span>
+<!--                  <span class="link-block">-->
+<!--                    <a href="https://github.com/YOUR REPO HERE" target="_blank"-->
+<!--                    class="external-link button is-normal is-rounded is-dark">-->
+<!--                    <span class="icon">-->
+<!--                      <i class="fab fa-github"></i>-->
+<!--                    </span>-->
+<!--                    <span>Code</span>-->
+<!--                  </a>-->
+<!--                </span>-->
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://arxiv.org/abs/2505.21041" target="https://arxiv.org/abs/2505.21041"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -127,13 +150,16 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video>
+      <img src="static/images/teaser_s.jpg" alt="MY ALT TEXT"/>
+<!--      <video poster="" id="tree" autoplay controls muted loop height="100%">-->
+<!--        &lt;!&ndash; Your video here &ndash;&gt;-->
+<!--        <source src="static/videos/banner_video.mp4"-->
+<!--        type="video/mp4">-->
+<!--      </video>-->
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        We present CityGo, an explicit and efficient framework for high-fidelity rendering of large-scale urban scenes.
+        By combining proxy buildings, residual Gaussians, and surrounding Gaussians, we enable efficient, high-quality
+        urban scene rendering on lightweight devices for applications such as in-vehicle navigation and aerial perception.
       </h2>
     </div>
   </div>
@@ -148,7 +174,25 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            Accurate and efficient modeling of large-scale urban scenes is critical for applications such as AR
+            navigation, UAV-based inspection, and smart city digital twins. While aerial imagery offers broad coverage
+            and complements limitations of ground-based data, reconstructing city-scale environments from such views
+            remains challenging due to occlusions, incomplete geometry, and high memory demands. Recent advances like
+            3D Gaussian Splatting (3DGS) improve scalability and visual quality but remain limited by dense primitive
+            usage, long training times, and poor suitability for edge devices. We propose CityGo, a hybrid framework
+            that combines textured proxy geometry with residual and surrounding 3D Gaussians for lightweight,
+            photorealistic rendering of urban scenes from aerial perspectives. Our approach first extracts compact
+            building proxy meshes from MVS point clouds, then uses zero-order SH Gaussians to generate occlusion-free
+            textures via image-based rendering and back-projection. To capture high-frequency details, we introduce
+            residual Gaussians placed based on proxy-photo discrepancies and guided by depth priors. Broader urban
+            context is represented by surrounding Gaussians, with importance-aware downsampling applied to non-critical
+            regions to reduce redundancy. A tailored optimization strategy jointly refines proxy textures and Gaussian
+            parameters, enabling real-time rendering of complex urban scenes on mobile GPUs with significantly reduced
+            training and memory requirements. Extensive experiments on real-world aerial datasets demonstrate that our
+            hybrid representation significantly reduces training time, achieving on average $1.4\times$ speedup, while
+            delivering comparable visual fidelity to pure 3D Gaussian Splatting approaches. Furthermore, CityGo enables
+            real-time rendering of large-scale urban scenes on mobile consumer GPUs, with substantially reduced memory
+            usage and energy consumption.
           </p>
         </div>
       </div>
@@ -165,40 +209,42 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/pipeline_s.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          Overview of our hybrid representation for large-scale urban scenes. We begin by generating dense point
+          clouds from aerial images and initializing zero-order SH Gaussians to capture the entire scene. Buildings and
+          surrounding areas are then segmented and processed separately. For buildings, we adopt a hybrid representation
+          of textured proxy meshes and residual Gaussians, while simplified Gaussians are used for the
+          surroundings. The final model enables photorealistic rendering with significant speedups for
+          cinematic or real-time performance on lightweight devices.
         </h2>
       </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div>
+<!--      <div class="item">-->
+<!--        &lt;!&ndash; Your image here &ndash;&gt;-->
+<!--        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>-->
+<!--        <h2 class="subtitle has-text-centered">-->
+<!--          Second image description.-->
+<!--        </h2>-->
+<!--      </div>-->
+<!--      <div class="item">-->
+<!--        &lt;!&ndash; Your image here &ndash;&gt;-->
+<!--        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>-->
+<!--        <h2 class="subtitle has-text-centered">-->
+<!--         Third image description.-->
+<!--       </h2>-->
+<!--     </div>-->
+<!--     <div class="item">-->
+<!--      &lt;!&ndash; Your image here &ndash;&gt;-->
+<!--      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>-->
+<!--      <h2 class="subtitle has-text-centered">-->
+<!--        Fourth image description.-->
+<!--      </h2>-->
+<!--    </div>-->
   </div>
 </div>
 </div>
 </section>
 <!-- End image carousel -->
-
-
-
 
 <!-- Youtube video -->
 <section class="hero is-small is-light">
@@ -211,7 +257,7 @@
           
           <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/a4eE_YkMgt4?si=wcgcSvcpbd9kcYbb" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -220,58 +266,58 @@
 </section>
 <!-- End youtube video -->
 
-
-<!-- Video carousel -->
+<!-- Paper poster -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <h2 class="title">Gallery</h2>
+        <img src="static/images/Gallery1.jpg" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Visualization of examples rendered using our CityGO models in the Area-H scene. Comparisons are provided to
+          highlight the proxy building and the final rendered results.
+        </h2>
+        <img src="static/images/Gallery2.jpg" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Visualization of examples rendered using our CityGO models in the Area-L scene. Comparisons are provided to
+          highlight the proxy building and the final rendered results.
+        </h2>
+      </div>
+    </div>
+  </section>
+<!--End paper poster -->
+
+<!-- Video carousel -->
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3">Experimental Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
+<!--        <div class="item item-video1">-->
+<!--          <video poster="" id="video1" autoplay controls muted loop height="100%">-->
+<!--            &lt;!&ndash; Your video file here &ndash;&gt;-->
+<!--            <source src="static/videos/carousel1.mp4"-->
+<!--            type="video/mp4">-->
+<!--          </video>-->
+<!--        </div>-->
+<!--        <div class="item item-video2">-->
+<!--          <video poster="" id="video2" autoplay controls muted loop height="100%">-->
+<!--            &lt;!&ndash; Your video file here &ndash;&gt;-->
+<!--            <source src="static/videos/carousel2.mp4"-->
+<!--            type="video/mp4">-->
+<!--          </video>-->
+<!--        </div>-->
+<!--        <div class="item item-video3">-->
+<!--          <video poster="" id="video3" autoplay controls muted loop height="100%">\-->
+<!--            &lt;!&ndash; Your video file here &ndash;&gt;-->
+<!--            <source src="static/videos/carousel3.mp4"-->
+<!--            type="video/mp4">-->
+<!--          </video>-->
+<!--        </div>-->
       </div>
     </div>
   </div>
 </section>
 <!-- End video carousel -->
-
-
-
-
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
-    </div>
-  </section>
-<!--End paper poster -->
 
 
 <!--BibTex citation -->
