--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/images/teaser_s.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/teaser_s.jpg" alt="Teaser"/>
 <!--      <video poster="" id="tree" autoplay controls muted loop height="100%">-->
 <!--        &lt;!&ndash; Your video here &ndash;&gt;-->
 <!--        <source src="static/videos/banner_video.mp4"-->
@@ -206,10 +206,11 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <h2 class="title is-3">Method</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/pipeline_s.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/pipeline_s.jpg" alt="Pipeline"/>
         <h2 class="subtitle has-text-centered">
           Overview of our hybrid representation for large-scale urban scenes. We begin by generating dense point
           clouds from aerial images and initializing zero-order SH Gaussians to capture the entire scene. Buildings and
