--- a/index.html
+++ b/index.html
@@ -204,44 +204,20 @@
 
 <!-- Image carousel -->
 <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Method</h2>
-        <!-- Your image here -->
-        <img src="static/images/pipeline_s.jpg" alt="Pipeline"/>
-        <h2 class="subtitle has-text-centered">
+<div class="hero-body">
+  <div class="container">
+    <h2 class="title">Method</h2>
+      <img src="static/images/pipeline_s.jpg" alt="Pipeline"/>
+      <h2 class="subtitle has-text-centered">
           Overview of our hybrid representation for large-scale urban scenes. We begin by generating dense point
           clouds from aerial images and initializing zero-order SH Gaussians to capture the entire scene. Buildings and
           surrounding areas are then segmented and processed separately. For buildings, we adopt a hybrid representation
           of textured proxy meshes and residual Gaussians, while simplified Gaussians are used for the
           surroundings. The final model enables photorealistic rendering with significant speedups for
           cinematic or real-time performance on lightweight devices.
-        </h2>
-      </div>
-<!--      <div class="item">-->
-<!--        &lt;!&ndash; Your image here &ndash;&gt;-->
-<!--        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>-->
-<!--        <h2 class="subtitle has-text-centered">-->
-<!--          Second image description.-->
-<!--        </h2>-->
-<!--      </div>-->
-<!--      <div class="item">-->
-<!--        &lt;!&ndash; Your image here &ndash;&gt;-->
-<!--        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>-->
-<!--        <h2 class="subtitle has-text-centered">-->
-<!--         Third image description.-->
-<!--       </h2>-->
-<!--     </div>-->
-<!--     <div class="item">-->
-<!--      &lt;!&ndash; Your image here &ndash;&gt;-->
-<!--      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>-->
-<!--      <h2 class="subtitle has-text-centered">-->
-<!--        Fourth image description.-->
-<!--      </h2>-->
-<!--    </div>-->
+      </h2>
+    </div>
   </div>
-</div>
-</div>
 </section>
 <!-- End image carousel -->
 
