--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>CityGo: Lightweight Urban Modeling and Rendering with Proxy Buildings and Residual Gaussians</title>
-<!--  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">-->
+  <link rel="icon" type="image/x-icon" href="static/images/ShanghaiTech.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -267,7 +267,7 @@
 <!--End paper poster -->
 
 <!-- Video carousel -->
-<section class="hero is-small is-light">
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Experimental Results</h2>
