--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h1 class="title is-1 publication-title">CityGo: Lightweight Urban Modeling and Rendering with Proxy Buildings and Residual Gaussians</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-<!--              <span class="author-block">-->
-<!--                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Weihang Liu</a><sup>*</sup>,</span>-->
+              <span class="author-block">
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Weihang Liu</a><sup>*</sup>,</span>
               <span class="author-block">
                 Weihang Liu<sup>1,4,*</sup>,</span>
               <span class="author-block">
@@ -70,15 +70,15 @@
               <span class="author-block">
                 Honglong Zhang<sup>3</sup>,</span>
               <span class="author-block">
-                Lan Xu<sup>1</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="http://xu-lan.com/">Lan Xu</a><<sup>1</sup>,</span>
               <span class="author-block">
-                Xin Lou<sup>1,4</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="https://sist.shanghaitech.edu.cn/louxin/main.htm">Xin Lou</a><sup>1,4</sup>,</span>
               <span class="author-block">
-                Yujiao Shi<sup>1</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="https://yujiaoshi.github.io/">Yujiao Shi</a><sup>1</sup>,</span>
               <span class="author-block">
-                Jingyi Yu<sup>1</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="http://www.yu-jingyi.com/">Jingyi Yu</a><sup>1</sup>,</span>
               <span class="author-block">
-                Yingliang Zhang<sup>2</sup>,
+                <a href="FIRST AUTHOR PERSONAL LINK" target="https://cn.linkedin.com/in/yingliangzhang">Yingliang Zhang</a><sup>2</sup>,
               </span>
             </div>
 
