--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h1 class="title is-1 publication-title">CityGo: Lightweight Urban Modeling and Rendering with Proxy Buildings and Residual Gaussians</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Weihang Liu</a><sup>*</sup>,</span>
+<!--              <span class="author-block">-->
+<!--                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Weihang Liu</a><sup>*</sup>,</span>-->
               <span class="author-block">
                 Weihang Liu<sup>1,4,*</sup>,</span>
               <span class="author-block">
