--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <span class="author-block">
                 Honglong Zhang<sup>3</sup>,</span>
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="http://xu-lan.com/">Lan Xu</a><<sup>1</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="http://xu-lan.com/">Lan Xu</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="https://sist.shanghaitech.edu.cn/louxin/main.htm">Xin Lou</a><sup>1,4</sup>,</span>
               <span class="author-block">
