--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
               <span class="author-block">
                 Honglong Zhang<sup>3</sup>,</span>
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="http://xu-lan.com/">Lan Xu</a><sup>1</sup>,</span>
+                <a href="http://xu-lan.com/" target="_blank">Lan Xu</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="https://sist.shanghaitech.edu.cn/louxin/main.htm">Xin Lou</a><sup>1,4</sup>,</span>
+                <a href="https://sist.shanghaitech.edu.cn/louxin/main.htm" target="_blank">Xin Lou</a><sup>1,4</sup>,</span>
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="https://yujiaoshi.github.io/">Yujiao Shi</a><sup>1</sup>,</span>
+                <a href="https://yujiaoshi.github.io/" target="_blank">Yujiao Shi</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="http://www.yu-jingyi.com/">Jingyi Yu</a><sup>1</sup>,</span>
+                <a href="http://www.yu-jingyi.com/" target="_blank">Jingyi Yu</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="https://cn.linkedin.com/in/yingliangzhang">Yingliang Zhang</a><sup>2</sup>,
+                <a href="https://cn.linkedin.com/in/yingliangzhang" target="_blank">Yingliang Zhang</a><sup>2</sup>,
               </span>
             </div>
 
